[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartlib"
version = "0.2.0"
description = "HeartMuLa music generation library with multi-provider LLM integration and Gradio UI."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "HeartMuLa Team", email = "heartmula.ai@gmail.com"}
]
dependencies = [
    "numpy==2.0.2",
    "torch>=2.4,<2.11",
    "torchaudio>=2.4,<2.11",
    "torchtune==0.4.0",
    "torchao==0.9.0",
    "torchvision>=0.19,<0.26",
    "tqdm==4.67.1",
    "traitlets==5.7.1",
    "traittypes==0.2.3",
    "transformers==4.57.0",
    "tokenizers==0.22.1",
    "ipykernel==6.17.1",
    "einops==0.8.1",
    "accelerate==1.12.0",
    "bitsandbytes==0.49.0",
    "vector-quantize-pytorch==1.27.15",
    "modelscope==1.33.0",
    "soundfile"
]
urls = { "homepage" = "https://heartmula.github.io/" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
# pip install heartlib[ui]
ui = [
    "gradio>=4.44.0",
    "openai>=1.50.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
